...
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        <ImageButton
            android:id="@+id/edit_profile_button"
            android:contentDescription="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleX="0.7"
            android:scaleY="0.7"
...
