<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        tools:context=".ui.LoginActivity"
        tools:ignore="LabelFor">


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gf_logo" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/emailLogin"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/login"
                android:importantForAutofill="no"
                android:inputType="text|textEmailAddress"
                android:paddingStart="20dp"
                android:paddingLeft="12dp"
                android:paddingTop="16dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="16dp"
                android:singleLine="true" />

        <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingLeft="12dp"
                android:paddingTop="16dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="16dp"
                android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.297">

        <Button
            android:id="@+id/loginActivityButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/accent"
            android:text="@string/log_in"
            android:textColor="#FFFFFF" />

        <Button

            android:id="@+id/registerInsteadOfLoginButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button_outline_bold"
            android:text="@string/sign_in"
            android:textColor="@color/accent" />
    </LinearLayout>

    <ProgressBar
style="?android:attr/progressBarStyle"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/progressBarLogin" android:layout_marginTop="8dp"
app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
android:visibility="invisible"
android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>