...
    <string name="whatever">Wszystko jedno</string>
    <string name="game_time">Godzina rozgrywki</string>
    <string name="game_type">Gatunek</string>
    <string name="gather_team">zbieram drużynę do game pubu</string>
    <string name="invalid_email_address">"Błędny adres e-mail"</string>
    <string name="invalid_game_data">"Uzupełnij wszystkie pola!"</string>
    <string name="invalid_login_data">"Niepoprawne dane logowania"</string>
    <string name="join_game">Dołącz do gry</string>
    <string name="localization">Lokalizacja</string>
    <string name="pick_localization">Wybierz lokalizację</string>
    <string name="add_game_date">Dodaj datę \nrozgrywki</string>
    <string name="log_in">Zaloguj się</string>
    <string name="login">Login</string>
    <string name="login_successful">"Zalogowano"</string>
    <string name="logo">Logo</string>
    <string name="logout">Wyloguj</string>
    <string name="my_games">Moje gry</string>
    <string name="my_profile">Mój profil</string>
    <string name="name">Imię</string>
    <string name="nick">Nick</string>
    <string name="no_login_data">Podaj dane logowania!</string>
    <string name="no_registration_data">"Podaj dane do rejestracji"</string>
    <string name="number_of_players">Ilość graczy</string>
    <string name="max_number_of_players">Maksymalna lość graczy</string>
    <string name="min_number_of_players">Minimalna lość graczy</string>
    <string name="open_navigation_drawer">Otwórz szufladę nawigacji</string>
    <string name="password">Hasło</string>
...
